--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
             "email": "dev@nils.li"
         }
     ],
-    "require": {},
+    "require": {
+        "php": "^7.2"
+    },
     "require-dev": {
         "phpunit/phpunit": "^8.3"
     },
